<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2socketcan_bridge</name>
  <version>0.0.0</version>
  <description>Provides nodes to convert messages from SocketCAN to a ROS Topic and vice versa.</description>
  <maintainer email="philipp.wuestenberg@tu-berlin.de">Philipp Wuestenberg</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>rclc</build_depend>
  <build_depend>rmw_implementation</build_depend>
  
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>rclc</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

<!--<?xml version="1.0"?>
<package format="2">
  <name>socketcan_bridge</name>
  <version>0.6.5</version>
  <description>Provides nodes to convert messages from SocketCAN to a ROS Topic and vice versa.</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="ivor@iwanders.net">Ivor Wanders</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/socketcan_bridge</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>roscpp</depend>
  <depend>socketcan_interface</depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  </package>-->
